Added the review page
Works perfectly.
when refresh operation happens all data gets lost..

--- a/MovieRush/package.json
+++ b/MovieRush/package.json
@@ -24,7 +24,8 @@
     "@types/popper.js": "^1.11.0",
     "angular-responsive-carousel": "^2.1.2",
     "primeng": "^13.3.3",
-    "rxjs": "~7.5.0",
+    "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
