--- a/MovieRush/package.json
+++ b/MovieRush/package.json
@@ -24,7 +24,9 @@
     "@types/popper.js": "^1.11.0",
     "angular-responsive-carousel": "^2.1.2",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.3.4",
