--- a/MovieRush/package.json
+++ b/MovieRush/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^6.3.4",
     "nodemon": "^2.0.16",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "primeng": "^13.3.3",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
