--- a/MovieRush/package.json
+++ b/MovieRush/package.json
@@ -23,6 +23,7 @@
     "@popperjs/core": "^2.11.5",
     "@types/popper.js": "^1.11.0",
     "angular-responsive-carousel": "^2.1.2",
+    "angular2-flash-messages": "^3.0.1",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
