--- a/MovieRush/package.json
+++ b/MovieRush/package.json
@@ -38,6 +38,7 @@
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
+    "url": "^0.11.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
