--- a/MovieRush/package.json
+++ b/MovieRush/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^12.0.2",
     "@popperjs/core": "^2.11.5",
     "@types/popper.js": "^1.11.0",
+    "alife-rating-star": "^0.0.1",
     "angular-responsive-carousel": "^2.1.2",
     "angular2-flash-messages": "^3.0.1",
     "bcrypt": "^5.0.1",
